# gremllm

./: .gitignore  CHANGELOG.md  Makefile  README.md  example.py  idea.md  pyproject.toml
example/: cart.py  cart_output.md  counter.py  counter_output.md  wet_pool.py  wet_pool_output.md
gremllm/: __init__.py  core.py  llm.py
